2015-08-21  Nathan Sidwell  <nathan@acm.org>

	* config/nvptx/nvptx.md (allocate_stack): Emit sorry during
	expansion.
	* config/nvptx/nvptx.c (nvptx_declare_function_name): Look at
	crtl->stack_alignment_needed to determine alignment.
	(nvptx_get_drap_rtx): New.
	(TARGET_GET_DRAP_RTX): Override.
	* config/nvptx/nvptx.h (MAX_STACK_ALIGNMENT): Set.

2015-08-21  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	* config.build: Remove case for m68000-hp-hpux* | m68k-hp-hpux*.

2015-08-21  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	* configure.ac: Remove uwin* cases.
	* config.build: Remove cases for i370-*-opened*, i370-*-mvs*,
	i[34567]86-*-sco3.2v5*, i[34567]86-sequent-ptx4*,
	i[34567]86-sequent-sysv4*, i[34567]86-*-sysv4*,
	i[34567]86-*-udk*, i[34567]86-*-uwin*, i386-*-vsta.
	* config.host: Remove cases for i370-*-opened*, i370-*-mvs*,
	i[34567]86-*-uwin*, powerpc-*-beos*.

2015-08-21  Richard Sandiford  <richard.sandiford@arm.com>

	* gencodes.c (gencodes): Print the comma for the preceding
	enum value rather than the current one.  Use aliased enum values
	rather than #defines for compiled-out patterns.
	(main): Update accordingly.  Replace LAST_INSN_CODE with
	NUM_INSN_CODES.
	* lra.c (insn_code_data): Update accordingly.
	(finish_insn_code_data_once, get_static_insn_data): Likewise.
	* recog.h (target_recog): Likewise.
	(preprocess_insn_constraints): Change parameter to unsigned int.
	* recog.c (preprocess_insn_constraints): Likewise.
	(recog_init): Replace LAST_INSN_CODE with NUM_INSN_CODES.
	* tree-vect-stmts.c (vectorizable_operation): Simplify.

2015-08-21  Markus Trippelsdorf  <markus@trippelsdorf.de>

	PR rtl-optimization/61657
	* loop-iv.c (iv_number_of_iterations): Declare up and down as
	unsigned.  Remove superflous uint64_t cast.

2014-08-21  Felix Yang  <felix.yang@huawei.com>
	    Jiji Jiang  <jiangjiji@huawei.com>

	* value-prof.c (interesting_stringop_to_profile_p): Removed FNDECL argument
	and get builtin function code directly from CALL.