@@ -1,3 +1,11 @@
+2015-08-21  Alexandre Oliva <aoliva@redhat.com>
+
+	PR rtl-optimization/67227
+	PR rtl-optimization/64164
+	* alias.c (memrefs_conflict_p): Handle VALUEs in PLUS better.
+	(nonoverlapping_memrefs_p): Test offsets and sizes when given
+	identical gimple_reg exprs.
+
 2015-08-21  Nathan Sidwell  <nathan@acm.org>
 
 	* config/nvptx/nvptx.md (allocate_stack): Emit sorry during
